<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Remembrall</string>
    <string name="maintitle">TV Programs</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="days_of_week">Days of week</string>
    <string name="time">Time</string>
    <string name="channel">Channel</string>
    <string name="notification">Notification</string>
    <string name="list">List of Programs</string>
    <string name="action_add">ADD</string>
    <string name="save_button">Save</string>
    <string name="edit_button">Edit</string>
    <string name="delete_button">Delete</string>
    <string name="title_activity_newprogram">Add TV Show</string>
    <string name="title_activity_editprogram">Edit TV Show</string>
    <string name="title_activity_programs_listview"></string>
    <string name="title_activity_activity_splash">Remembrall</string>
    <string name="title_activity_activity_program_info">TV Show Info</string>

    <string name="info_days_of_week">Days of week:</string>
    <string name="info_time">Time:</string>
    <string name="info_channel">Channel:</string>
    <string name="info_notification">Level of Notification:</string>

    <string-array name="notification_levels">
        <item>Low</item>
        <item>Normal</item>
        <item>High</item>
    </string-array>
</resources>
