<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    tools:context="edu.umkc.amp95.remembrallapp.editprogram">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_activity_editprogram"
        android:textSize="30sp"
        android:id="@+id/newProgramTextViewTitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:padding="@dimen/padding_5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/nameTextView"
        android:layout_below="@+id/newProgramTextViewTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:layout_below="@+id/newProgramTextViewTitle"
        android:layout_alignRight="@+id/newProgramTextViewTitle"
        android:layout_alignEnd="@+id/newProgramTextViewTitle"
        android:layout_toRightOf="@+id/daysTextView"
        android:layout_toEndOf="@+id/daysTextView">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/days_of_week"
        android:id="@+id/daysTextView"
        android:layout_below="@+id/name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/days"
        android:layout_below="@+id/name"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/daysTextView"
        android:layout_toEndOf="@+id/daysTextView"
        android:visibility="invisible">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/time"
        android:id="@+id/timeTextView"
        android:layout_below="@+id/boxSunday"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_below="@+id/boxSunday"
        android:layout_alignLeft="@+id/days"
        android:layout_alignStart="@+id/days"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/channel"
        android:id="@+id/channelTextView"
        android:layout_below="@+id/time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/channel"
        android:layout_below="@+id/time"
        android:layout_alignLeft="@+id/time"
        android:layout_alignStart="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/notification"
        android:id="@+id/levelTextView"
        android:layout_below="@+id/channel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:padding="@dimen/padding_5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Su"
        android:id="@+id/boxSunday"
        android:checked="false"
        android:layout_below="@+id/daysTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mo"
        android:id="@+id/boxMonday"
        android:checked="false"
        android:layout_alignBottom="@+id/boxSunday"
        android:layout_toRightOf="@+id/boxSunday"
        android:layout_toEndOf="@+id/boxSunday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Tu"
        android:id="@+id/boxTuesday"
        android:checked="false"
        android:layout_alignTop="@+id/boxMonday"
        android:layout_toRightOf="@+id/boxMonday"
        android:layout_toEndOf="@+id/boxMonday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="We"
        android:id="@+id/boxWednesday"
        android:checked="false"
        android:layout_alignTop="@+id/boxTuesday"
        android:layout_toRightOf="@+id/boxTuesday"
        android:layout_toEndOf="@+id/boxTuesday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Th"
        android:id="@+id/boxThursday"
        android:checked="false"
        android:layout_alignTop="@+id/boxWednesday"
        android:layout_toRightOf="@+id/boxWednesday"
        android:layout_toEndOf="@+id/boxWednesday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fr"
        android:id="@+id/boxFriday"
        android:checked="false"
        android:layout_alignTop="@+id/boxThursday"
        android:layout_toRightOf="@+id/boxThursday"
        android:layout_toEndOf="@+id/boxThursday" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sa"
        android:id="@+id/boxSaturday"
        android:checked="false"
        android:layout_alignTop="@+id/boxFriday"
        android:layout_toRightOf="@+id/boxFriday"
        android:layout_toEndOf="@+id/boxFriday" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:onClick="saveData"
        android:id="@+id/save"
        android:layout_below="@+id/levelTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/comboNotification"
        android:layout_alignEnd="@+id/comboNotification" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comboNotification"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/channelTextView"
        android:layout_toRightOf="@+id/levelTextView"
        android:layout_toEndOf="@+id/levelTextView" />

</RelativeLayout>
